k8s-cd/deploy/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication

metadata:
  name: default
  namespace: PLACEHOLDER_NAMESPACE

spec:
  mtls:
    mode: STRICT
