k8s-cd/deploy/postgres-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: postgres-permissive
  namespace: yas-13
spec:
  selector:
    matchLabels:
      cluster-name: postgresql
  mtls:
    mode: PERMISSIVE
