k8s-cd/deploy/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: default-mtls
  namespace: PLACEHOLDER_NAMESPACE

spec:
  host: "*.PLACEHOLDER_NAMESPACE.svc.cluster.local"

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
